--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     @foreach (var item in Model)
     {
-        <div class="col-md-4 col-xs-6 border-primary mb-3">
+        <div class="col-md-4  col-sm-6 border-primary mb-3">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-12">
@@ -52,7 +52,7 @@
                         <div class="card-footer ">
                             <p class="card-text">
                                 <a class="btn btn-success text-white float-left"><i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
-                                <a class="btn btn-outline-primary float-end"><i class="bi bi-eye-fill"></i> Show Details</a>
+                                <a class="btn btn-outline-primary float-end"><i class="bi bi-eye-fill"></i> Details</a>
                             </p>
                         </div>
                     </div>
