--- a/eTickets/Views/Actors/Edit.cshtml
+++ b/eTickets/Views/Actors/Edit.cshtml
@@ -1,16 +1,18 @@
 ﻿@model Actor
 
 @{
-    ViewData["Title"] = "Actor details";
+    ViewData["Title"] = "Update actor";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Details for @Model.FullName</h1>
+            <h1>Update Actor</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
+                <form class="" asp-controller="Actors" asp-action="Edit" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group text-center">
                         <img class="img-thumbnail rounded-circle" id="ProfilePicturePreview" />
@@ -18,24 +20,25 @@
 
                     <div class="form-group">
                         <label asp-for="ProfilePictureURL" class="control-lable"></label>
-                        <input asp-for="ProfilePictureURL" class="form-control" readonly />
+                        <input asp-for="ProfilePictureURL" class="form-control" />
                         <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="FullName" class="control-lable"></label>
-                        <input asp-for="FullName" class="form-control" readonly />
+                        <input asp-for="FullName" class="form-control" />
                         <span asp-validation-for="FullName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Bio" class="control-lable"></label>
-                        <input asp-for="Bio" class="form-control" readonly />
+                        <input asp-for="Bio" class="form-control" />
                         <span asp-validation-for="Bio" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <a class="btn btn-outline-primary float-end mt-2" asp-controller="Actors" asp-action="Edit" asp-route-Id="@Model.Id">Edit</a>
+                        <input type="submit" value="Update" class="btn btn-success float-end mt-2" />
                         <a class="btn btn-outline-secondary mt-2" asp-controller="Actors" asp-action="Index">Show All</a>
                     </div>
 
+                </form>
             </div>
         </div>
     </div>
