--- a/eTickets/Views/Actors/Index.cshtml
+++ b/eTickets/Views/Actors/Index.cshtml
@@ -29,9 +29,9 @@
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
-                            <a class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
-                            <a class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
+                            <a asp-controller="Actors" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                            <a asp-controller="Actors" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
+                            <a asp-controller="Actors" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
                         </td>
                     </tr>
                 }
