--- a/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/Views/Cinemas/Index.cshtml
@@ -29,9 +29,9 @@
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
-                            <a class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
-                            <a class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
+                            <a asp-controller="Cinemas" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                            <a asp-controller="Cinemas" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
+                            <a asp-controller="Cinemas" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
                         </td>
                     </tr>
                 }
@@ -39,3 +39,8 @@
         </table>
     </div>
 </div>
+
+<div style="float:right; position:absolute; right:2vw; bottom:3vh;" class="position-sticky fixed-bottom text-white">
+    <a asp-controller="Cinemas" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i> Add New</a>
+</div>
+
