--- a/eTickets/Views/Movies/Details.cshtml
+++ b/eTickets/Views/Movies/Details.cshtml
@@ -78,7 +78,7 @@
                                 <i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Price.ToString("c"))
                             </a>
                             <a asp-controller="Movies" asp-action="Index" class="btn btn-outline-primary float-end">
-                                <i class="bi bi-eye-fill"></i> Back
+                                <i class="bi bi-back"></i> Back to list
                             </a>
                         </p>
                     </div>
