--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -11,7 +11,7 @@
             <h2>Your shopping cart summary</h2>
         </div>
 
-        <table class="table">
+        <table class="table table-responsive">
             <thead>
                 <tr>
                     <th>Selected amount</th>
@@ -30,7 +30,7 @@
                         <td class="align-middle">@item.Movie.Price.ToString("c")</td>
                         <td class="align-middle">@((item.Amount * item.Movie.Price).ToString("c"))</td>
                         <td class="align-middle">
-                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemToShoppingCart" asp-route-id="@item.Movie.Id">
+                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingCart" asp-route-id="@item.Movie.Id">
                                 <i class="bi bi-cart-dash"></i></a>
                             |
                             <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Movie.Id">
