--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -56,6 +56,7 @@
 
         <div class="text-center">
             <div class="btn-group">
+                <a class="btn btn-outline-primary" asp-controller="Orders" asp-action="CompleteOrder"></a>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
