--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -30,15 +30,13 @@
                         <td class="align-middle">@item.Movie.Price.ToString("c")</td>
                         <td class="align-middle">@((item.Amount * item.Movie.Price).ToString("c"))</td>
                         <td class="align-middle">
-                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingCart"
-                           asp-route-id="@item.Movie.Id">
-                                <i class="bi bi-cart-dash"></i>
-                            </a>
-                            |
-                            <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart"
-                           asp-route-id="@item.Movie.Id">
-                                <i class="bi bi-cart-plus"></i>
-                            </a>
+                            <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingCart" 
+                            asp-route-id="@item.Movie.Id">
+                                <i class="bi bi-cart-dash"></i></a> | 
+
+                            <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart" 
+                            asp-route-id="@item.Movie.Id">
+                                <i class="bi bi-cart-plus"></i></a>
                         </td>
                     </tr>
                 }
