--- a/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/Views/Cinemas/Index.cshtml
@@ -8,11 +8,14 @@
     <div class="col-md-8 offset-md-2">
         <table class="table">
             <thead>
-                <tr class="text-center">                    
+                <tr class="text-center">
                     <th>@Html.DisplayNameFor(model => model.Logo)</th>
                     <th>@Html.DisplayNameFor(model => model.Name)</th>
                     <th>@Html.DisplayNameFor(model => model.Description)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -20,7 +23,7 @@
                 {
                     <tr>
                         <td class="align-middle">
-                            <img class="img-thumbnail rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px;" >
+                            <img class="img-thumbnail rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width:150px;">
                         </td>
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Name)
@@ -28,11 +31,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
-                        <td class="align-middle">
-                            <a asp-controller="Cinemas" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
-                            <a asp-controller="Cinemas" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
-                            <a asp-controller="Cinemas" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a asp-controller="Cinemas" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                                <a asp-controller="Cinemas" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
+                                <a asp-controller="Cinemas" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
