--- a/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/Views/Producers/Index.cshtml
@@ -12,7 +12,10 @@
                     <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
                     <th>@Html.DisplayNameFor(model => model.FullName)</th>
                     <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -28,11 +31,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
-                        <td class="align-middle">
-                            <a asp-controller="Producers" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
-                            <a asp-controller="Producers" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
-                            <a asp-controller="Producers" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a asp-controller="Producers" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-outline-primary mb-2 mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                                <a asp-controller="Producers" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-outline-info mb-2 mr-2"><i class="bi bi-eye"></i> Display</a>
+                                <a asp-controller="Producers" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-outline-danger mb-2 mr-2"><i class="bi bi-trash"></i> Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
